--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -3,5 +3,11 @@ server {
   index index.php index.html index.htm;
   root /var/www/public/;
 
-  error_page 401 403 404 429 /404.html;
+  error_page 404 /404.html;
+  error_page 401 /401.html;
+  error_page 403 /403.html;
+  error_page 429 /429.html;
+  error_page 500 /500.html;
+  error_page 502 /502.html;
+  error_page 503 504 /503.html;
 }
